# prompt-templates

./: README.md  pyproject.toml  requirements.txt
prompt-templates/base_template/: base.yaml
prompt-templates/coding/: python.yaml
prompt-templates/communication/: grammer_spelling.yaml
prompt-templates/documentation/: concise_styling.yml
prompt-templates/general/: hygiene.yaml
prompt_templates/: cli.py  old_cli
prompt_templates/cli/: arguments.py  banner.py  clipboard.py  interactive_menu.py  main.py  renderer.py  template_manager.py
prompt_templates/templates/base_template/: base.yaml
prompt_templates/templates/coding/: jinja_styling.yaml  python.yaml  python_black_styling.yaml  python_ruff_styling.yaml  python_styling.yaml  yaml_styling.yaml
prompt_templates/templates/communication/: formal_mail.yaml  grammer_spelling.yaml
prompt_templates/templates/documentation/: concise_styling.yml
prompt_templates/templates/frameworks/agile/general/: spike.yaml
prompt_templates/templates/frameworks/agile/scrum/: retrospectives.yaml
prompt_templates/templates/general/: hygiene.yaml  requirements.yaml  reset.yaml
prompt_templates/templates/understanding/: abtract_level.yaml
prompt_templates/tests/: test_yaml_files.py
